<resources>
    <string name="app_name">Study</string>
    <string name="action_settings">Settings</string>
    <string name="action_google">Google Spread 参照</string>
    <string name="action_reg_member">名前を登録して選択</string>
    <string name="action_select_change">選択メンバー変更</string>
    <string name="action_index">人数設定(インデックス)</string>
    <string name="action_index_label">人数設定( %d 人 )</string>
    <string name="add_member">メンバー追加</string>
    <string name="member_name">名前</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">キャンセル</string>
    <string name="menu_cancel">キャンセル</string>
    <string name="menu_delete">削除</string>
    <string name="guide_editText_name">プレイヤー名を入力します</string>
    <string name="fin_game">ゲーム終了</string>
    <string name="err_few_players">4人以上選択してください。</string>
    <string name="err_few_number">4人以上設定してください。</string>
    <string name="download_data_reuse">読込済みデータ再利用</string>
    <string name="label_url">spreadsheetId</string>
    <string name="label_sheet_name">シート名</string>
    <string name="label_clear_way_choice">現在の組み合わせ</string>
    <string name="label_all_clear">すべてクリア</string>
    <string name="label_incomplete_game_clear">終了ゲームを残してクリア(メンバー変更)</string>
    <string name="error_need_spread_url">spreadsheetId と シート名を設定してください。</string>
    <string name="select_number">人数</string>
    <string name="action_upload_google">結果をGoogle Spread に保存</string>

    <string-array name="list">
        <item>4人</item>
        <item>5人</item>
        <item>6人</item>
        <item>7人</item>
        <item>8人</item>
        <item>9人</item>
        <item>10人</item>
    </string-array>
    <string-array name="list_court">
        <item>1面</item>
        <item>2面</item>
        <item>3面</item>
        <item>4面</item>
    </string-array>
    <string-array name="game_score">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>
